--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
     <section id="contact">
         <h2>Contacto</h2>
         <p>¿Interesado en trabajar con nosotros? Contáctanos:</p>
-        <p>Email: <a href="mailto:info@iotindustrial.com">info@iotindustrial.com</a></p>
-        <p>Teléfono: +56 9 1234 5678</p>
+        <p>Email: <a href="mailto:galindbenjamin@gmail.com">galindbenjamin@gmail.com</a></p>
+        <p>Teléfono: +56 9 51193701</p>
     </section>
     <footer>
         <p>&copy; 2025 Servicios Industriales e IoT. Todos los derechos reservados.</p>
