--- a/index.html
+++ b/index.html
@@ -85,14 +85,57 @@
             <div class="service">
                 <h3>Automatización Industrial</h3>
                 <p>Diseñamos soluciones completas para automatizar procesos industriales y optimizar tu producción.</p>
+                <ul>
+                    <li>Diseño e implementación de sistemas de control</li>
+                    <li>Optimización de procesos industriales</li>
+                    <li>Sistemas HMI y SCADA</li>
+                    <li>Simulación de procesos industriales</li>
+                </ul>
             </div>
             <div class="service">
                 <h3>IoT Industrial</h3>
                 <p>Implementamos sensores y conectividad para obtener datos en tiempo real de tus sistemas.</p>
+                <ul>
+                    <li>Integración de sensores industriales</li>
+                    <li>Desarrollo de dashboards personalizados</li>
+                    <li>Monitoreo y mantenimiento predictivo</li>
+                    <li>Conectividad industrial</li>
+                </ul>
             </div>
             <div class="service">
                 <h3>Robótica Móvil</h3>
                 <p>Desarrollamos soluciones en robótica móvil para logística y operaciones automatizadas.</p>
+                <ul>
+                    <li>Implementación de robots móviles</li>
+                    <li>Control y navegación autónoma</li>
+                    <li>Robótica colaborativa</li>
+                </ul>
+            </div>
+            <div class="service">
+                <h3>Educación y Formación</h3>
+                <p>Capacitación y formación técnica para profesionales e instituciones educativas.</p>
+                <ul>
+                    <li>Capacitación técnica en automatización y diseño</li>
+                    <li>Entrenamiento en programación robótica</li>
+                    <li>Implementación de laboratorios educativos</li>
+                </ul>
+            </div>
+            <div class="service">
+                <h3>Diseño y Prototipado</h3>
+                <p>Soluciones personalizadas en diseño CAD/CAE e impresión 3D.</p>
+                <ul>
+                    <li>Diseño de planos normados</li>
+                    <li>Prototipado rápido con impresión 3D</li>
+                    <li>Creación de piezas funcionales</li>
+                </ul>
+            </div>
+            <div class="service">
+                <h3>Consultoría y Soporte Técnico</h3>
+                <p>Apoyo especializado en la implementación de soluciones industriales y IoT.</p>
+                <ul>
+                    <li>Asesoramiento técnico personalizado</li>
+                    <li>Soporte en integración hardware y software</li>
+                </ul>
             </div>
         </div>
     </section>
@@ -103,8 +146,8 @@
     <section id="contact">
         <h2>Contacto</h2>
         <p>¿Interesado en trabajar con nosotros? Contáctanos:</p>
-        <p>Email: <a href="mailto:galindbenjamin@gmail.com">galindbenjamin@gmail.com</a></p>
-        <p>Teléfono: +56 9 51193701</p>
+        <p>Email: <a href="mailto:info@iotindustrial.com">info@iotindustrial.com</a></p>
+        <p>Teléfono: +56 9 1234 5678</p>
     </section>
     <footer>
         <p>&copy; 2025 Servicios Industriales e IoT. Todos los derechos reservados.</p>
