cambios en la nube

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios Industriales e IoT</title>
+    <title>Soluciones Industriales en la Nube</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -71,8 +71,8 @@
 </head>
 <body>
     <header>
-        <h1>Servicios Industriales e IoT</h1>
-        <p>Automatización Industrial y Robótica Móvil</p>
+        <h1>Soluciones Industriales en la Nube</h1>
+        <p>Potenciamos la automatización industrial con Azure y AWS</p>
     </header>
     <nav>
         <a href="#services">Servicios</a>
@@ -83,74 +83,64 @@
         <h2>Nuestros Servicios</h2>
         <div class="services">
             <div class="service">
-                <h3>Automatización Industrial</h3>
-                <p>Diseñamos soluciones completas para automatizar procesos industriales y optimizar tu producción.</p>
+                <h3>Integración de Azure IoT</h3>
+                <p>Conectamos tus equipos industriales a la nube utilizando Azure IoT para recopilar y analizar datos en tiempo real.</p>
                 <ul>
-                    <li>Diseño e implementación de sistemas de control</li>
-                    <li>Optimización de procesos industriales</li>
-                    <li>Sistemas HMI y SCADA</li>
-                    <li>Simulación de procesos industriales</li>
+                    <li>Despliegue de IoT Hub</li>
+                    <li>Configuración de dispositivos IoT Edge</li>
+                    <li>Visualización de datos en Azure Dashboard</li>
                 </ul>
             </div>
             <div class="service">
-                <h3>IoT Industrial</h3>
-                <p>Implementamos sensores y conectividad para obtener datos en tiempo real de tus sistemas.</p>
+                <h3>Soluciones con AWS</h3>
+                <p>Implementamos servicios de AWS para gestionar y optimizar tus operaciones industriales.</p>
                 <ul>
-                    <li>Integración de sensores industriales</li>
-                    <li>Desarrollo de dashboards personalizados</li>
-                    <li>Monitoreo y mantenimiento predictivo</li>
-                    <li>Conectividad industrial</li>
+                    <li>Implementación de AWS IoT Core</li>
+                    <li>Procesamiento de datos con Lambda y Kinesis</li>
+                    <li>Almacenamiento seguro con S3 y RDS</li>
                 </ul>
             </div>
             <div class="service">
-                <h3>Robótica Móvil</h3>
-                <p>Desarrollamos soluciones en robótica móvil para logística y operaciones automatizadas.</p>
+                <h3>Mantenimiento Predictivo</h3>
+                <p>Utilizamos inteligencia artificial en la nube para prever fallos y reducir tiempos muertos.</p>
                 <ul>
-                    <li>Implementación de robots móviles</li>
-                    <li>Control y navegación autónoma</li>
-                    <li>Robótica colaborativa</li>
+                    <li>Modelos de machine learning en Azure ML</li>
+                    <li>Análisis de tendencias con AWS SageMaker</li>
+                    <li>Notificaciones en tiempo real</li>
                 </ul>
             </div>
             <div class="service">
-                <h3>Educación y Formación</h3>
-                <p>Capacitación y formación técnica para profesionales e instituciones educativas.</p>
+                <h3>Dashboards Personalizados</h3>
+                <p>Diseñamos paneles interactivos para monitorear tus procesos desde cualquier lugar.</p>
                 <ul>
-                    <li>Capacitación técnica en automatización y diseño</li>
-                    <li>Entrenamiento en programación robótica</li>
-                    <li>Implementación de laboratorios educativos</li>
+                    <li>Integración con Power BI y QuickSight</li>
+                    <li>Reportes automáticos</li>
+                    <li>Control en tiempo real</li>
                 </ul>
             </div>
             <div class="service">
-                <h3>Diseño y Prototipado</h3>
-                <p>Soluciones personalizadas en diseño CAD/CAE e impresión 3D.</p>
+                <h3>Consultoría en Migración</h3>
+                <p>Te ayudamos a trasladar tus sistemas industriales a la nube de forma eficiente y segura.</p>
                 <ul>
-                    <li>Diseño de planos normados</li>
-                    <li>Prototipado rápido con impresión 3D</li>
-                    <li>Creación de piezas funcionales</li>
-                </ul>
-            </div>
-            <div class="service">
-                <h3>Consultoría y Soporte Técnico</h3>
-                <p>Apoyo especializado en la implementación de soluciones industriales y IoT.</p>
-                <ul>
-                    <li>Asesoramiento técnico personalizado</li>
-                    <li>Soporte en integración hardware y software</li>
+                    <li>Evaluación de infraestructura actual</li>
+                    <li>Planificación de la migración</li>
+                    <li>Soporte post-migración</li>
                 </ul>
             </div>
         </div>
     </section>
     <section id="about">
         <h2>Sobre Nosotros</h2>
-        <p>Somos un equipo apasionado por la tecnología y la innovación, dedicado a ofrecer soluciones personalizadas en automatización industrial y IoT.</p>
+        <p>Somos un equipo especializado en soluciones industriales basadas en la nube, combinando innovación y tecnología para transformar tu operación.</p>
     </section>
     <section id="contact">
         <h2>Contacto</h2>
         <p>¿Interesado en trabajar con nosotros? Contáctanos:</p>
-        <p>Email: <a href="mailto:info@iotindustrial.com">info@iotindustrial.com</a></p>
+        <p>Email: <a href="mailto:info@solucionesnube.com">info@solucionesnube.com</a></p>
         <p>Teléfono: +56 9 1234 5678</p>
     </section>
     <footer>
-        <p>&copy; 2025 Servicios Industriales e IoT. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Soluciones Industriales en la Nube. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
