--- a/graficos.html
+++ b/graficos.html
@@ -228,6 +228,11 @@
                 indexAxis: 'y'
             }
         });
+        
+        
     </script>
+    <footer>
+        <button onclick="window.location.href='index.html'" style="margin: 1rem; padding: 0.5rem 1rem; font-size: 16px; background-color: #004080; color: white; border: none; cursor: pointer;">Volver al Inicio</button>
+    </footer>
 </body>
 </html>
