--- a/index.html
+++ b/index.html
@@ -124,14 +124,24 @@
     </section>
     <section id="about">
         <h2>Sobre Nosotros</h2>
-        <p>Somos un equipo especializado en soluciones industriales basadas en la nube, combinando innovación y tecnología para transformar tu operación.</p>
+        <p>
+            Somos una empresa especializada en brindar soluciones tecnológicas avanzadas para la visualización de datos industriales.
+            Utilizamos herramientas de última generación para integrar sistemas de monitoreo remoto que facilitan la supervisión 
+            y el análisis de procesos en tiempo real, mejorando la eficiencia operativa.
+        </p>
+        <p>
+            Nuestra plataforma está diseñada para adaptarse a diversas necesidades industriales, ofreciendo una interfaz intuitiva y 
+            capacidades escalables que permiten tomar decisiones fundamentadas y oportunas.
+        </p>
     </section>
     <section id="contact">
         <h2>Contacto</h2>
-        <p>¿Interesado en trabajar con nosotros? Contáctanos:</p>
         <p>Email: <a href="mailto:galindbenjamin@gmail.com">galindbenjamin@gmail.com</a></p>
-        <p>Teléfono: +56 9 51193701</p>
-        <button onclick="window.location.href='mailto:galindbenjamin@gmail.com'">Escríbenos</button>
+        <p>Teléfono: +56951193701</p>
+        <button style="background-color: #25D366; border: none; padding: 10px 20px; border-radius: 5px; color: white; font-size: 16px;" 
+            onclick="window.open('https://wa.me/56951193701?text=Hola%20estoy%20interesado%20en%20sus%20servicios', '_blank')">
+            Chatea con Nosotros
+        </button>
     </section>
     <footer>
         <p>&copy; 2025 Soluciones Industriales en la Nube. Todos los derechos reservados.</p>
