--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             capacidades escalables que permiten tomar decisiones fundamentadas y oportunas.
         </p>
     </section>
-    <section id="contact">
+    <section id="contact" style="margin-bottom: 80px;">
         <h2>Contacto</h2>
         <p>Email: <a href="mailto:galindbenjamin@gmail.com">galindbenjamin@gmail.com</a></p>
         <p>Teléfono: +56951193701</p>
