--- a/graficos.html
+++ b/graficos.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <header>
-        <h1>Ejemplos de Gráficos con Chart.js</h1>
+        <h1>Ejemplos de Grraficos de telemetrias</h1>
         <p>Visualización de variables de proceso</p>
     </header>
     <div class="chart-container">
